FIX Layout img height restrictions set
FIX Layout img height restrictions set

Set img height restrictions so that the image wont be too tall that
image & label both go off the viewable screen.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,17 +1,17 @@
 @import "./reset/basic-reset";
 
 body {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 img {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 #counter, #image-container, #button {
-  position: relative;
-  transform: translateX(-50%);
-  left: 50%;
+	position: relative;
+	transform: translateX(-50%);
+	left: 50%;
 }
 
 
@@ -20,30 +20,30 @@ img {
 ===========================================*/
 
 #menu::-webkit-scrollbar {
-  display: none;
+	display: none;
 }
 
 #menu {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  top: 0;
-  z-index: 10;
-  max-width: 106px;
-  width: 10%;
-  min-width: 70px;
-  background: purple;
-  max-height: 600px;
-  overflow-x: hidden;
-  overflow-y: auto;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	top: 0;
+	z-index: 10;
+	max-width: 106px;
+	width: 10%;
+	min-width: 70px;
+	background: purple;
+	max-height: 600px;
+	overflow-x: hidden;
+	overflow-y: auto;
 
-  #menu-title {
-    margin: 10px;
-    border-radius: 2px;
-    background-color: rgba(255, 216, 255, 0.61);
-    text-transform: uppercase;
-    font: bold 1em;
-  }
+	#menu-title {
+	margin: 10px;
+	border-radius: 2px;
+	background-color: rgba(255, 216, 255, 0.61);
+	text-transform: uppercase;
+	font: bold 1em;
+	}
 }
 
 
@@ -51,54 +51,51 @@ img {
 =            The Cat Instances Image       =
 ==========================================*/
 #image-container {
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  max-width: 903px;
-  height: 600px;
-  left: 50%;
-  overflow: hidden;
+	position: fixed;
+	z-index: 1;
+	width: 100%;
+	max-width: 903px;
+	height: 600px;
+	left: 50%;
+	overflow: hidden;
 
-  .imgBox {
-    width: 10%;
-    display: block;
-    position: absolute;
-    transform: translateX(-50%);
-    word-break: break-word;
-    overflow: hidden;
-    opacity: 0;
-    z-index: -1;
+	.imgBox {
+			width: 10%;
+			display: block;
+			position: absolute;
+			transform: translateX(-50%);
+			word-break: break-word;
+			overflow: hidden;
+			opacity: 0;
+			z-index: -1;
+			max-height: 600px;
 
-    img {
-      width: 100%;
-    }
+	.image-label, .imgCounter {
+		position: fixed;
+		bottom: 5%;
+		left: 50%;
+		padding: 10px;
+		transform: translateX(-50%);
+		font: bold 1.5em 'Arial';
+		background-color: rgba(214, 214, 214, 0.76);
+		border-radius: 10px;
+	}
 
-    .image-label, .imgCounter {
-      position: fixed;
-      bottom: 5%;
-      left: 50%;
-      padding: 10px;
-      transform: translateX(-50%);
-      font: bold 1.5em 'Arial';
-      background-color: rgba(214, 214, 214, 0.76);
-      border-radius: 10px;
-    }
+	.imgCounter {
+		bottom: 82%;
+		padding: 6px 12px;
+		Background-color: rgba(152, 188, 230, 0.76);
+		top: 15px;
+		bottom: auto;
+	}
+	}
 
-    .imgCounter {
-      bottom: 82%;
-      padding: 6px 12px;
-      Background-color: rgba(152, 188, 230, 0.76);
-      top: 15px;
-      bottom: auto;
-    }
-  }
-
-  .active {
-    opacity: 100;
-    z-index: 4;
-    width: 100%;
-    left: 50%;
-  }
+	.active {
+	opacity: 100;
+	z-index: 4;
+	width: 100%;
+	left: 50%;
+	}
 }
 
 
